Index file updated

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li><a href="gallery.html">Gallery</a></li>
           <li><a href="residents.html">Residents</a></li>
           <li><a href="news.html">News</a></li>
-          <li><a href="contacts.html">Contacts</a></li>
+          <li><a href="contacts.html">Contact Us</a></li>
         </ul>
       </nav>
       <h1><a href="index.html" id="logo">nightclub feel the rhythm</a></h1>
