--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="wrapper pad_bot1">
           <section class="col1">
             <h2 id="welcom">Hello!</h2>
-            <p class="color1">Night Club is one of free website templates created by TemplateMonster.com team. This website template is optimized for 1024X768 screen resolution. It is also XHTML &amp; CSS valid.</p>
+            <p class="color1">Night Club is one of free website templates created by TemplateMonster.com team... This website template is optimized for 1024X768 screen resolution. It is also XHTML &amp; CSS valid.</p>
             <p class="pad_bot1">This Night Club Template goes with two packages – with PSD source files and without them. PSD source files are available for free for the registered members of Templates.com. The basic package (without PSD source) is available for anyone without registration.</p>
             <a href="#" class="link1">Read More</a> </section>
           <section class="col1 pad_left1">
